adding average calculus

--- a/map.ipynb
+++ b/map.ipynb
@@ -47,17 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "beecf453-21f2-4ba2-a1ec-aaaa0959432c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average income :  2081370.347183567\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 0.98, 'Income')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -76,12 +83,23 @@
     "geo_data = gpd.read_file('100eco/grid100.shp')\n",
     "geo_data = geo_data.to_crs(epsg=4326)\n",
     "\n",
+    "geo_data_2021_ = geo_data[geo_data.metai ==  2021 ]\n",
+    "\n",
     "plt.rcParams[\"figure.figsize\"] = (20,10)\n",
+    "\n",
+    "incomeSum = 0\n",
+    "numberInSum = 0\n",
+    "for index, row in geo_data_2021_.iterrows():\n",
+    "    grid_id = row['grid_id']\n",
+    "    pajamos_value = row['pajamos']\n",
+    "    #print(f\"GRID_ID: {grid_id}, PAJAMOS: {pajamos_value}\")\n",
+    "    numberInSum += 1\n",
+    "    incomeSum += int(pajamos_value)\n",
+    "print(\"Average income : \", (incomeSum / numberInSum))\n",
     "\n",
     "fig, ax =  plt.subplots(1, 1)\n",
     "#print(geo_data.head())\n",
     "\n",
-    "geo_data_2021_ = geo_data[geo_data.metai ==  2021 ]\n",
     "geo_data_2021_.plot(column = geo_data.pajamos , ax = ax)\n",
     "\n",
     "plt.ylim((54.81, 54.97))\n",
