add personnalised plots file

--- a/kaunasOnlyNormalised.ipynb
+++ b/kaunasOnlyNormalised.ipynb
@@ -325,8 +325,8 @@
    "outputs": [],
    "source": [
     "def getColor(val):\n",
-    "    red = int(255*(1 - max(min(val, 1),0)))\n",
-    "    green = int(255*max(min(val, 1),0))\n",
+    "    red = int(255*(1 - max(min(float(val), 1),0)))\n",
+    "    green = int(255*max(min(float(val), 1),0))\n",
     "    #print(\"c\", val, red, green)\n",
     "    color = '#%02x%02x%02x' % (red, green, 0)\n",
     "    #print(color)\n",
