changing style of original points

--- a/sources/.old/gradient_data.ipynb
+++ b/sources/.old/gradient_data.ipynb
@@ -360,7 +360,7 @@
     "    if positionsOriginal != []: \n",
     "        # plot original free locations\n",
     "        for location in positionsOriginal:\n",
-    "            plt.plot(location[0], location[1], 'ok', fillstyle='none')\n",
+    "            plt.plot(location[0], location[1], 'ok')\n",
     "    \n",
     "    plt.show()\n",
     "    ax.set_aspect('equal')"
@@ -509,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objectiveFunctDistanceImportance(positionsFixed, positionsFree, displayDistanceComparison=False):\n",
+    "def objectiveFunctDistanceImportance(positionsFixed, positionsFree):\n",
     "    distanceVal = 0\n",
     "    importanceVal = 0\n",
     "    avgDist = averageDistanceBetweenAllPoints(positionsFixed, positionsFree)\n",
@@ -529,8 +529,6 @@
     "    for i in range(0, len(positionsFree)):\n",
     "        importanceVal += 1-float(get_normalized_value_at_coordinates(geo_data_merged, positionsFree[i, 0], positionsFree[i, 1]))\n",
     "    \n",
-    "    if displayDistanceComparison:\n",
-    "        print(\"Comparison distance: \", distanceVal, importanceVal)\n",
     "    return distanceVal + importanceVal"
    ]
   },
